--- a/logstash.conf
+++ b/logstash.conf
@@ -7,7 +7,7 @@ input {
 
 output {
     elasticsearch {
-        hosts => ["https://localhost:9200"]
+        hosts => ["http://localhost:9200"]
         index => "logstash-django"
         user => "elastic"
         password => "-FzduR4JmlVmXfNLIoR2"
