--- a/manifests/web-deployment.yaml
+++ b/manifests/web-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: web
-        image: athalt/tripcraft
+        image: athalt/tripcraft:latest
         ports:
         - containerPort: 8000
